2005-12-19  Kalpit Desai <kvdesai@email.unc.edu>
	* load_laser_tracking.m: Added comments about output parameters

2005-11-21  Jeremy Cribb <jcribb@email.unc.edu>
	* load_video_tracking.m:  moved an informational message to a better place.

2005-11-21  Jeremy Cribb <jcribb@email.unc.edu>
	* remove_drift.m: Fixed "not enough points" warning that occurred when a tracker did not exist during the drift-estimation time period.

2005-11-17  Jeremy Cribb <jcribb@email.unc.edu>
	* load_video_tracking.m: added 'table' parameter to the documentation
	* remove_drift: now reports the drift velocity removed from each coordinate for each bead.

2005-10-12  Kalpit Desai <kvdesai@email.unc.edu>
	* load_laser_tracking.m: Added. Version 1.0
	- clone of load_vrpn_tracking, but cleaner, more efficient and easy to use. Didn't want to break the dependent code, so created anew with more appropriate name.
	- Compatible to log files created by laser tracker 04.00 and later only.
	- Loads only those fields which are requested, thus conservs memory.
	- Function input signature is changed, but output format is same as load_vrpn_tracking.

2005-10-10  Jeremy Cribb <jcribb@email.unc.edu>
	* remove_drift.m: removed stupid typo.

2005-10-10  Jeremy Cribb  <jcribb@email.unc.edu>
	* remove_drift.m: fixed bug where remove_drift would break if a tracker had no data (empty dataset).

2005-10-10  Jeremy Cribb  <jcribb@email.unc.edu>
  * remove_drift.m: added.  removes drift from video datasets using either center-of-mass or linear approximation methods.

2005-09-22  Jeremy Cribb  <jcribb@email.unc.edu>
	* load_video_tracking.m: fixed filter on older spot_tracker .vrpn.mat files.  Fixed logentry that liked to repeat itself.

2005-09-16  Jeremy Cribb  <jcribb@email.unc.edu>
	* load_vrpn_tracking.m:  new cvs updates of load_vrpn_tracking has inserted lines between code.  Removed these extra lines, because the actually break the code.

2005-09-13  Jeremy Cribb  <jcribb@email.unc.edu>